--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
 /*Cabeçalho*/
 
 header{
-    background-color: var(--laranja);
+    background: linear-gradient(135deg, var(--laranja) 80%, var(--amarelo) 100%);
     width: 100%;
     height: 7vh;
     display: flex;              /* ativa flexbox */
@@ -43,11 +43,11 @@ nav > span > a{
     color: var(--branco);
     text-shadow: 0.5px 0.5px 1px 1px rgba(0, 0, 0, 0.253);
     text-decoration: none;
+    transition: all 0.6s ease;
 }
 
 nav > span > a:hover{
     color: var(--vermelho-escuro);
-    transition: 0.6s;
     font-size: 1.7em;
 }
 
@@ -63,3 +63,6 @@ nav > span > a > img:hover{
     display: flex;
     transition: 0.6s;
 }
+
+/*Corpo*/
+
